# arcade

./: CMakeLists.txt  doc.md  score.txt
assets/: assetOpengl.txt  cameraOpengl.txt
src/core/: Core.cpp  Core.hpp  main.cpp
src/core/Engine/Rect/: Rect.hpp
src/core/Engine/Vector2/: Vector2.hpp
src/core/dir/: Dir.cpp  Dir.hpp
src/core/dl/: dl.cpp  dl.hpp
src/games/: IGames.hpp
src/games/Centipede/: Centipede.cpp  Centipede.hpp
src/games/Snake/: Snake.cpp  Snake.hpp
src/lib/: ILib.hpp
src/lib/Ncurses/: Ncurses.cpp  Ncurses.hpp
src/lib/SDL/: SDL.cpp  SDL.hpp
src/lib/SFML/: SFML.cpp  SFML.hpp
